--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ DATABASE_URL="mysql://root:123456@localhost/naility"
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://noreply@naility.com:Mo230586@mail.infomaniak.com:465
+MAILER_DSN=smtp://user:password@domain:port
 ###< symfony/mailer ###
